# strace-bpf

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/bpf/: strace.bpf.c  vmlinux.h
test/: Makefile  call_that_sys  call_that_sys.c
