[package]
name = "strace-bpf"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.24.8"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[[bin]]
name = "strace-bpf"

[dependencies]
libbpf-rs = "0.24.8"

